src/index.css
/**GLOBAL STYLES**/

body {
  margin: 0;
  display: flex;
  justify-content: center;
  min-width: 320px;
  min-height: 100vh;
  background-color: #E8EFF7;
}

/*root is like "main" and these are the original VITE styles; customized in App.css*/
:root {
  color-scheme: light dark;
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;  
}


h1 {
  font-size: 3.5em;
  line-height: 1.1;
  text-align: center;
  font-family: "Playfair Display SC", serif;
  font-weight: 400;
}

h3 {
  text-align: center;
}


h5 {
  margin: auto;
}

ul {
  list-style: none;
}

a {
  font-weight: 700;
  text-decoration: none;
  cursor: pointer;
  color: #04598b;
}

a:hover {
  color: #e1b14c;
  text-decoration: underline dotted;
}

.coffee-img {
  height: 60px;
  width: 217px;
}

.coffee-div {
  display: flex;
  justify-content: center;
}

.resources {
  display: flex;
  flex-flow: column;
  align-items: center;
  margin-top: 40px;
}

.search {
  display: inline-flex;
  width: 30%;
  justify-content: center;
}

.filters {
  display: flex;
  flex-flow: column;
  align-items: center;
  margin: 15px 0;
}

/*Filter Chip Styles*/
.filter-div {
  display: inline-flex;
  align-items: center;
  margin: 6px;
}

label:focus-visible {
  outline: 3px solid purple;
}

.checkbox { 
  padding: 5px 10px;
  border-radius: 20px;
  font-family: "Prompt", sans-serif;
  font-weight: 300;
  font-size: 1rem;
  margin: 5px;
  background-color: #453E4F;
  box-shadow: none;
  cursor: pointer;
  color: white;
  position: relative;
}


.checked-styles {
  background-color: #e1b14c;
  color: black;
  transition: background-color 0.2s;
}

.unchecked-styles {
  background-color: #453E4F;
  transition: background-color 0.2s;
}


.checked-styles:hover {
  background-color: #f8d697;
}
  
.unchecked-styles:hover {
  background-color: #cac4d1;
}


/*Checkmark Styles*/

.checkbox > input {
  display: none;

}

.checkbox > input:checked {
  border: none;
  display: none;
  background-color: #e1b14c;
}

.checkbox > input:checked + span::before {
  content: '\2713';
  display: inline-block;
  text-align: center;
  color: black;
  top: 0.1rem;
  margin-right: 8px;
}

.checkbox > input:active {
  border: none;
}


/*Button styles*/

button {
  padding: 3px 6px;
  border-radius: 5px;
  font-family: "Prompt", sans-serif;
  font-weight: 300;
  font-size: 1rem;
  margin: 5px;
  border: 2px solid darkgray;
  background-color: lightgray;
  
}

button:hover {
  border: 2px solid purple;
}

button:active {
  background-color: gray;
}

/*Style card section*/
#cards-section {
  display: flex;
  flex-flow: row wrap;
  justify-content: space-around;
  min-height: 800px;
}



/*Styles tags in resource card*/

#tagsContainer ul {
  padding: 0;
}

#tagsContainer ul li {
  background-color: lavenderblush;
  border: 2px solid black;
  padding: 3px 6px;
  border-radius: 5px;
  margin: 5px;
  display: inline-block;
  
}


/*Styles resource card*/
.card {
  width: 400px;
  height: 350px;
  margin: 1em 0;
  padding: 20px 40px;
  border-radius: 30px;
  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
  background-color: white;
  box-sizing: border-box;
  border-top: 30px solid #AC80A0;
}


.animate.pop {
  animation-duration: 0.5s;
  animation-name: animate-pop;
  animation-timing-function: cubic-bezier(.26, .53, .74, 1.48);
}

@keyframes animate-pop {
  0% {
    opacity: 0;
    transform: scale(0.5, 0.5);
  }

  100% {
    opacity: 1;
    transform: scale(1, 1);
  }
}

/*footer*/
#footer {
  background-color:#453E4F;
  width: 100%;
  border-radius: 10px;
  color: lavenderblush;
  padding: 10px 0;
  text-align: center;
}

#footer a:hover {
  text-decoration: none;
}

i:hover {
  color: #AC80A0;
}

i {
  margin-right: 15px;
  color: lavenderblush;
}

@media (prefers-color-scheme: light) {
  :root {
    color: #333;
    background-color:#E8EFF7;
  }

  a:hover {
    color: #e1b14c;
  }

  button {
    background-color:lightgray;
  }
} 


@media (max-width: 768px) {
  #root {
    width: 90%;
  }

  .search {
    width: 100%;
  }

  h5 {
    width: 100%;
    text-align: center;
  }

  .filter-div {
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
  }

}

@media (max-width: 440px) {
  h1 {
    font-size: 2.5em; 
  }
  #cards-section {
    flex-flow: column;
    align-items: center;
  }
  .card {
    width: 320px;
    height: 280px;
    padding: 0 20px;
  }

  #resource {
    font-size: .825em;
  }
}

